:art: 폴더 틀 생성

--- a/backend/apigateway-service/src/main/resources/application.yml
+++ b/backend/apigateway-service/src/main/resources/application.yml
@@ -25,3 +25,9 @@ spring:
       hibernate:
         format_sql: true
 
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://k8b306.p.ssafy.io:8761/eureka   # ? ??? service ? ?????.
