:lipstick: 쿠폰 이미지 넣기 쿠폰 자리 만듦 쿠폰 이미지 넣어둠 캐러셀로 넣는 방법 찾는 중

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
     - assets/image/image 7.png
     - assets/image/image 8.png
     - assets/image/image 9.png
+    - assets/image/coupon 1.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
