--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
     - assets/image/image 8.png
     - assets/image/image 9.png
     - assets/image/coupon 1.png
+    - assets/image/coupon 2.png
+    - assets/image/coupon 3.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -85,17 +87,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: NanumSquare
+      fonts:
+        - asset: assets/fonts/NanumSquareNeo-aLt.ttf
+        - asset: assets/fonts/NanumSquareNeo-bRg.ttf
+        - asset: assets/fonts/NanumSquareNeo-cBd.ttf
+        - asset: assets/fonts/NanumSquareNeo-dEb.ttf
+        - asset: assets/fonts/NanumSquareNeo-eHv.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
