--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/image/test.jpg
     - assets/image/Logo_Reslow.png
     - assets/image/image 1.png
     - assets/image/image 2.png
@@ -91,11 +92,11 @@ flutter:
   fonts:
     - family: NanumSquare
       fonts:
-        - asset: assets/fonts/NanumSquareNeo-aLt.ttf
-        - asset: assets/fonts/NanumSquareNeo-bRg.ttf
-        - asset: assets/fonts/NanumSquareNeo-cBd.ttf
-        - asset: assets/fonts/NanumSquareNeo-dEb.ttf
-        - asset: assets/fonts/NanumSquareNeo-eHv.ttf
+        - asset: assets/font/NanumSquareNeo-aLt.ttf
+        - asset: assets/font/NanumSquareNeo-bRg.ttf
+        - asset: assets/font/NanumSquareNeo-cBd.ttf
+        - asset: assets/font/NanumSquareNeo-dEb.ttf
+        - asset: assets/font/NanumSquareNeo-eHv.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
