:art: application.yml 환경별 분리

--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -2,15 +2,13 @@ server:
   port: 8080
 
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    # Mysql Settings
-    url: jdbc:mysql://localhost:3306/reslow?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: ${LOCAL_MYSQL_NAME}
-    password: ${LOCAL_MYSQL_PASSWORD}
+  profiles:
+    active: ${ACTIVE}
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
   main:
     web-application-type: reactive
 
@@ -19,9 +17,8 @@ spring:
     open-in-view: false
     show-sql: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       use-new-id-generator-mappings: false
     properties:
       hibernate:
         format_sql: true
-
