--- a/backend/reslow/build.gradle
+++ b/backend/reslow/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.387'
 }
 
 dependencyManagement {
