--- a/backend/reslow/build.gradle
+++ b/backend/reslow/build.gradle
@@ -3,6 +3,13 @@ plugins {
 	id 'org.springframework.boot' version '2.7.11'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'org.asciidoctor.jvm.convert' version '3.3.2'
+	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+}
+
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
 }
 
 group = 'com.ssafy.reslow'
@@ -49,6 +56,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.387'
+
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 }
 
 dependencyManagement {
@@ -57,12 +67,24 @@ dependencyManagement {
 	}
 }
 
-tasks.named('test') {
-	outputs.dir snippetsDir
-	useJUnitPlatform()
+def querydslDir = "$buildDir/generated/'querydsl'"
+
+querydsl {
+	jpa = true
+	querydslSourcesDir = querydslDir
 }
 
-tasks.named('asciidoctor') {
-	inputs.dir snippetsDir
-	dependsOn test
+sourceSets {
+	main.java.srcDir querydslDir
+}
+
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
+}
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+	querydsl.extendsFrom compileClasspath
 }
