--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   http: ^0.13.4
   shared_preferences: ^2.1.0
-
+  dio: ^5.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
