--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.0.0
-
+  image_picker: ^0.8.7+4
   http: ^0.13.4
   shared_preferences: ^2.1.0
   dio: ^5.1.1
