:wrench: Match 사용할 수 있는 Custom Dialect Config 추가

--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+    dialect: com.ssafy.reslow.global.config.MySQLDialectCustom
   sql:
     init:
       mode: always
