--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_messaging: ^11.2.5
+  flutter_local_notifications: ^9.2.0
   flutter:
     sdk: flutter
   carousel_slider: ^4.0.0
