:white_check_mark: websocket 연결 확인중

--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
 jwt:
   secret: ${JWT_SECRETKEY}
 
+fcm:
+  credentials:
+    fcm-server-key: ${FCM_SERVER_KEY}
+
 cloud:
   aws:
     credentials:
