🎨 아임포트 결제 검증 환경 세팅

--- a/backend/reslow/build.gradle
+++ b/backend/reslow/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+
+	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
 }
 
 dependencyManagement {
@@ -87,4 +89,10 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 	querydsl.extendsFrom compileClasspath
+}
+
+allprojects {
+	repositories {
+		maven { url 'https://jitpack.io' }
+	}
 }
