--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -46,3 +46,8 @@ cloud:
     include: aws
 
 default-image-s3: ${DEFAULT_PROGILE_IMAGE}
+
+iamport:
+  api:
+    key: ${IAMPORT_KEY}
+    secret: ${IAMPORT_SECRET}
