--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -2,8 +2,6 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
-     // Add the Google services Gradle plugin
-    id 'com.google.gms.google-services'
 }
 
 def localProperties = new Properties()
@@ -53,12 +51,10 @@ android {
         applicationId "com.ssafy.dobby.reslow"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 23 // for the firebase-firestore
-        multiDexEnabled true // added
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        // resValue "string", "applicationName", "MyApp"
     }
 
     signingConfigs {
@@ -88,15 +84,4 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:multidex:1.0.3'
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
-    implementation 'com.google.firebase:firebase-analytics'
-  // When using the BoM, you don't specify versions in Firebase library dependencies
-
-  // TODO: Add the dependencies for Firebase products you want to use
-  // See https://firebase.google.com/docs/android/setup#available-libraries
-  // For example, add the dependencies for Firebase Authentication and Cloud Firestore
-  implementation 'com.google.firebase:firebase-auth'
-  implementation 'com.google.firebase:firebase-firestore'
 }
