--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -1,24 +1,21 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-        google() // Google's Maven repository
-        mavenCentral() // Maven Central repository
+        google()
+        mavenCentral()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-         // Add the dependency for the Google services Gradle plugin
-        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
 allprojects {
-repositories {
-    google()  // Google's Maven repository
-    mavenCentral()  // Maven Central repository
-  }
-    
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 rootProject.buildDir = '../build'
@@ -32,4 +29,3 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
-
