--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -28,6 +28,11 @@ spring:
       mode: always
       continue-on-error: true
       data-locations: classpath:sql/data.sql
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      
 jwt:
   secret: ${JWT_SECRETKEY}
 
