--- a/backend/reslow/build.gradle
+++ b/backend/reslow/build.gradle
@@ -32,6 +32,8 @@ ext {
 }
 
 dependencies {
+    // mongo DB
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     // firebase sdk
     implementation 'com.google.firebase:firebase-admin:9.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
@@ -59,10 +61,10 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.387'
 
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
-	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
 }
 
 dependencyManagement {
@@ -94,7 +96,7 @@ configurations {
 }
 
 allprojects {
-	repositories {
-		maven { url 'https://jitpack.io' }
-	}
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
