--- a/backend/reslow/Dockerfile
+++ b/backend/reslow/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:11-jdk
 LABEL maintainer="mnb3559@gmail.com"
 ARG JAR_FILE=build/libs/reslow-0.0.1-SNAPSHOT.jar
 ADD ${JAR_FILE} docker-springboot.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/docker-springboot.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/docker-springboot.jar","-Duser.timezone=Asia/Seoul"]
