--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   socket_io_client: ^2.0.2
+  stomp_dart_client: ^0.4.4
 
 dev_dependencies:
   flutter_test:
