--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,9 +40,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  socket_io_client: ^2.0.2
+  stomp_dart_client: ^0.4.4
   flutter_inappwebview: ^5.7.2+3
   kpostal: ^0.5.1
   iamport_flutter: ^0.10.0
+  flutter_local_notifications: ^14.0.0+1
 
 dev_dependencies:
   flutter_test:
