--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: false
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: update
       use-new-id-generator-mappings: false
@@ -38,7 +38,9 @@ spring:
       url: jdbc:mysql://k8b306.p.ssafy.io:27017/reslow?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
       username: ${DEV_MONGO_NAME}
       password: ${DEV_MONGO_PASSWORD}
-
+  batch:
+    jdbc:
+      initialize-schema: always
 
 jwt:
   secret: ${JWT_SECRETKEY}
