--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   kpostal: ^0.5.1
   iamport_flutter: ^0.10.0
   flutter_local_notifications: ^14.0.0+1
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.5.0
+  firebase_messaging: ^14.5.0
 
 dev_dependencies:
   flutter_test:
