--- a/backend/reslow/build.gradle
+++ b/backend/reslow/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
     implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
+
+    implementation 'org.json:json:20210307'
 }
 
 dependencyManagement {
