--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -35,9 +35,11 @@ spring:
   data:
     mongodb:
       host: k8b306.p.ssafy.io
-      url: jdbc:mysql://k8b306.p.ssafy.io:27017/reslow?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      port: 27017
       username: ${DEV_MONGO_NAME}
       password: ${DEV_MONGO_PASSWORD}
+      authentication-database: admin
+      database: reslow
 
 
 jwt:
