:wrench: logging level error로 변경함...

--- a/backend/reslow/src/main/resources/application.yml
+++ b/backend/reslow/src/main/resources/application.yml
@@ -77,7 +77,7 @@ delivery:
   api:
     key: ${DELIVERY_API_KEY}
 
-logging:
-  level:
-    root:
-      debug
+#logging:
+#  level:
+#    root:
+#      debug
