--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
   firebase_messaging: ^14.5.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
