--- a/backend/batch/src/main/resources/application.yml
+++ b/backend/batch/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  properties:
+    hibernate:
+      default_batch_fetch_size: 100
+
 ---
 spring:
   datasource:
