--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^4.5.0
   firebase_messaging: ^14.5.0
   transparent_image: ^2.0.1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
